--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/index.html
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/index.html
@@ -5,34 +5,29 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Prediction League</title>
+    <title>The Predictions - Premier League Prediction Game</title>
     <base href="/" />
+
+    <!-- Social Media Meta Tags -->
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.thepredictions.co.uk/">
+    <meta property="og:title" content="The Predictions - The Ultimate Premier League Prediction Game">
+    <meta property="og:description" content="Challenge your friends, prove your football knowledge, and top the leaderboard. Your journey to prediction glory starts here.">
+    <meta property="og:image" content="https://www.thepredictions.co.uk/images/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.thepredictions.co.uk/">
+    <meta property="twitter:title" content="The Predictions - The Ultimate Premier League Prediction Game">
+    <meta property="twitter:description" content="Challenge your friends, prove your football knowledge, and top the leaderboard. Your journey to prediction glory starts here.">
+    <meta property="twitter:image" content="https://www.thepredictions.co.uk/images/logo.png">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="css/app.css" />
-
-    <!--<script>
-        (function (h, o, u, n, d) {
-            h = h[d] = h[d] || { q: [], onReady: function (c) { h.q.push(c) } }
-            d = o.createElement(u); d.async = 1; d.src = n;
-            n = o.getElementsByTagName(u)[0]; n.parentNode.insertBefore(d, n);
-        })(window, document, 'script', 'https://www.datadoghq-browser-agent.com/eu1/v6/datadog-rum.js', 'DD_RUM');
-        window.DD_RUM.onReady(function () {
-            window.DD_RUM.init({
-                clientToken: 'pub2a393681d7ce94e5d042a35e5644a3c8',
-                applicationId: '50c9b40a-6278-4cf6-9014-3d54410d2eba',
-                site: 'datadoghq.eu',
-                service: 'the-predictions-ui',
-                env: 'development',
-                sessionSampleRate: 100,
-                sessionReplaySampleRate: 20,
-                defaultPrivacyLevel: 'mask-user-input'
-            });
-        });
-    </script>-->
 </head>
 
 <body>
